Fix black square on radio button bug on iOS

--- a/app/assets/stylesheets/member-facing/fundraiser.scss
+++ b/app/assets/stylesheets/member-facing/fundraiser.scss
@@ -272,6 +272,12 @@
       }
     }
 
+    // Fix for iOS radio button black square bug
+    .form--big input[type='radio'] {
+      background: none;
+    }
+
+
     .overlay-toggle__close-button {
       display: none;
     }
